# tactica

./: .gitignore  LICENSE  README.md  TASK.md  TODO.md  pyproject.toml
docs/: agents.md  c4-mcts.html  cli.md  evaluation.md  extending.md  simulator.md
experiments/: full-ladder.json  noise-floor-mcts.json  quick-smoke.json  showmatch-mcts-vs-heuristic.json  skill-curve-heuristic.json  sprt-default-vs-conservative.json
scripts/: gen_unit_icons.py
src/tactica/: __init__.py  actions.py  battle.py  cli.py  scenario.py  units.py
src/tactica/agents/: __init__.py  base.py  epsilon.py  heuristic.py  mcts.py  random_agent.py  weighted.py
src/tactica/eval/: __init__.py  runner.py  stats.py  tournament.py
src/tactica/web/: __init__.py  frames.py  games.py  jobs.py  server.py
src/tactica/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_actions.py  test_agents.py  test_determinism.py  test_property.py  test_replay.py  test_rules.py  test_strength_regression.py  test_web.py
weights/: aggressive.json  conservative.json
