[project]
name = "tactica"
version = "0.1.0"
description = "HoMM-style turn-based tactics AI sandbox: headless simulator, agent ladder, evaluation tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
eval = [
    "openskill>=5.0",
    "matplotlib>=3.8",
]

[project.scripts]
tactica = "tactica.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
# Mirrors the `eval` extra so a plain `uv sync` yields a fully working
# sandbox (tournament ratings, plots). pip users install `tactica[eval]`.
eval = [
    "openskill>=5.0",
    "matplotlib>=3.8",
]

[tool.uv]
default-groups = ["dev", "eval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tactica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
