[project]
name = "tactica"
version = "0.1.0"
description = "HoMM-style turn-based tactics AI sandbox: headless simulator, agent ladder, evaluation tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
eval = [
    "openskill>=5.0",
    "matplotlib>=3.8",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
tactica = "tactica.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",  # fastapi TestClient transport, used by tests/test_web.py
]
# Mirrors the `eval` extra so a plain `uv sync` yields a fully working
# sandbox (tournament ratings, plots). pip users install `tactica[eval]`.
eval = [
    "openskill>=5.0",
    "matplotlib>=3.8",
]
# Mirrors the `web` extra: `tactica web` dashboard. pip users install tactica[web].
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[tool.uv]
default-groups = ["dev", "eval", "web"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tactica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
